# photolog

./: .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  database.py  image_processing.py  main.py  middleware.py  models.py  security.py
app/routers/: auth.py  images.py
static/css/: styles.css
static/favicon/: site.webmanifest
templates/: base.html  index.html  login.html  upload.html
templates/partials/: error_message.html  image_list.html
